@@ -1,5 +1,9 @@
 2010-05-29  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
+	* dprsgw.c, ttyreader.c, aprx.c, aprx.h:
+	    Experimental DPRS receiver. Studying packet identification from serial
+	    port datastream.
+
 	* interface.c, doc/aprx-manual.odt:
 	    Effects of 'filter ...'  on different <digipeater>
 	    <source> sections are subtly different. See the manual!
